--- a/public/about.html
+++ b/public/about.html
@@ -71,7 +71,7 @@
     <ol>
       Liên kết mạng xã hội:
       <li><a href="https://github.com/minhnguyen">Github</a></li>
-      <li><a href="https://likeln.comcom/minhnguyen">LikeLnLikeLn</a></li>
+      <li><a href="https://likeln.comcom/minhnguyen">LikeLn</a></li>
       <li>
         <a href="https://behancebehance.com/minhnguyen">Behance</a>
       </li>
